<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of BeepMe.

BeepMe is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

BeepMe is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with BeepMe. If not, see <http://www.gnu.org/licenses/>.

Copyright since 2012 Michael Glanznig
http://beepme.glanznig.com
-->

<resources>
    <string name="about_app_info">Helps you in performing experience sampling (DES/ESM) by delivering beeps at random times.</string>
    <string name="about_title">About BeepMe</string>
    <string name="about_email">E-Mail:</string>
    <string name="about_license">Copyright 2012-2014 Michael Glanznig.\nLicensed under GNU GPL v3 and provided AS IS without any warranty.</string>
    <string name="about_version">Version:</string>
    <string name="about_website">Website:</string>
    <string name="about_website_button">Website</string>
    <string name="action_about">About</string>
    <string name="action_beeper_off">Turn Beeper Off</string>
    <string name="action_beeper_on">Turn Beeper On</string>
    <string name="action_edit_sample">Edit Sample</string>
    <string name="action_export">Export Data</string>
    <string name="action_settings">Settings</string>
    <string name="action_take_photo">Take Photo</string>
    <string name="action_change_photo">Change Photo</string>
    <string name="action_delete_photo">Delete Photo</string>
    <string name="action_test_beep">Generate Beep</string>
    <string name="add">Add</string>
    <string name="app_name">BeepMe</string>
    <string name="beep">What is on your mind?</string>
    <string name="cancel">Cancel</string>
    <string name="data_delete_progress">Deleting data...</string>
    <string name="done">Done</string>
    <string name="edit_sample">Edit Sample</string>
    <string name="error_no_mail_apps">There are no mail apps available.</string>
    <string name="export_active">Data are being exported.</string>
    <string name="export_mail_subject">BeepMe Data Export</string>
    <string name="export_send_mail_msg">The archive has the size of %1$s. Do you want to send it by mail?</string>
    <string name="export_success_send_mail_title">Exported successfully</string>
    <string name="history">History</string>
    <string name="mail_chooser_title">Choose app to send</string>
    <string name="main_menu_new_sample">New Sample</string>
    <string name="main_menu_samples_list">View Samples</string>
    <string name="new_sample">New Sample</string>
    <string name="new_sample_add_tag_error">Keyword has already been added.</string>
    <string name="new_sample_back_warning_msg">Please take some time to enter the details of your moment.\n\nIf you leave here your moment is saved as it is now. You can edit it later.</string>
    <string name="new_sample_back_warning_title">Leave now?</string>
    <string name="new_sample_moment">New moment</string>
    <string name="new_sample_replace_img_delete">Photo has been deleted.</string>
    <string name="new_sample_replace_img_msg">Do you want to replace the photo?</string>
    <string name="new_sample_replace_img_title">Replace Photo</string>
    <string name="new_sample_save_success">Sample has been recorded.</string>
    <string name="no">No</string>
    <string name="notify_content">Beeper is active</string>
    <string name="notify_title">BeepMe</string>
    <string name="notify_title_testmode">BeepMe (Test Mode)</string>
    <string name="pause_beeper">Pause Beeper</string>
    <string name="photo_delete_warning_title">Delete Photo</string>
    <string name="photo_delete_warning_msg">This cannot be undone. Really delete the photo?</string>
    <string name="pref_summary_pause_beeper_during_call">Pause beeper during phone call.</string>
    <string name="pref_title_pause_beeper_during_call">Pause during call</string>
    <string name="pref_summary_test_mode">Helps to discover BeepMe. Data entered in this mode is stored separately.</string>
    <string name="pref_title_test_mode">Test Mode</string>
    <string name="pref_summary_timer_profile">Adjust beeper to different usage scenarios.</string>
    <string name="pref_title_timer_profile">Beeper Profile</string>
    <string name="pref_summary_vibrate_beep">Vibrate and play sound notification.</string>
    <string name="pref_title_vibrate_beep">Vibrate at beep</string>
    <string name="refresh">Refresh</string>
    <string name="sample_description">How was your moment like?</string>
    <string name="sample_description_help">e.g. describe in fragments or full-text</string>
    <string name="sample_keyword">Keyword</string>
    <string name="sample_keywords">Keywords</string>
    <string name="sample_keywords_help">enter or select open keywords</string>
    <string name="sample_no_description_editable">No description for this moment yet.</string>
    <string name="sample_no_description">No description for this moment.</string>
    <string name="sample_no_keywords_editable">No keywords for this moment yet.</string>
    <string name="sample_no_keywords">No keywords for this moment.</string>
    <string name="sample_swipe_newer">Newer</string>
    <string name="sample_swipe_pos">%1$d of %2$d</string>
    <string name="sample_swipe_older">Older</string>
    <string name="sample_title">Title of moment</string>
    <string name="sample_title_help">e.g. summarizing keyword</string>
    <string name="sample_untitled">Untitled</string>
    <string name="samples">Moments</string>
    <string name="samples_list_no_samples">You will find your recorded moments here.</string>
    <string name="start_beeper">Start Beeper</string>
    <string name="sdcard_error">SD card not inserted or not writable.</string>
    <string name="time_beeper_active">Elapsed</string>
    <string name="today">Today</string>
    <string name="view_sample">View Moment</string>
    <string name="warn_test_mode_msg">All app data are being deleted. Do you want to proceed?</string>
    <string name="warn_test_mode_title">Warning</string>
    <string name="yes">Yes</string>
</resources>
