<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference android:key="vibrateAtBeep"
        android:title="@string/pref_title_vibrate_beep"
        android:summary="@string/pref_summary_vibrate_beep"
        android:defaultValue="true" />
    <!-- <CheckBoxPreference android:key="warnNoWifi"
        android:title="@string/pref_title_warn_no_wifi"
        android:summary="@string/pref_summary_warn_no_wifi"
        android:defaultValue="true" /> -->
    <ListPreference android:key="timerProfile"
        android:title="@string/pref_title_timer_profile"
        android:summary="@string/pref_summary_timer_profile"
        android:defaultValue="general" />
    <com.glanznig.beepme.ConfirmCheckBoxPreference android:key="testMode"
        android:title="@string/pref_title_test_mode"
        android:summary="@string/pref_summary_test_mode"
        android:defaultValue="false" />
</PreferenceScreen>